[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "html-snapshot"
version = "0.1.4"
description = "Capture a PNG screenshot of a local HTML presentation using Playwright"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Mehmet Oner Yalcin"}]
dependencies = [
    "playwright==1.56.0",
]

[project.urls]
Homepage = "https://github.com/oneryalcin/html-snapshot"
Source = "https://github.com/oneryalcin/html-snapshot"
Issues = "https://github.com/oneryalcin/html-snapshot/issues"

[project.scripts]
html-snapshot = "html_snapshot:main"

[tool.setuptools]
py-modules = ["html_snapshot"]

[[tool.uv.index]]
name = "html-snapshot"
url = "https://oauth2accesstoken@europe-west1-python.pkg.dev/red-studio-399209/python-packages/simple/"
publish-url = "https://oauth2accesstoken@europe-west1-python.pkg.dev/red-studio-399209/python-packages/"

[tool.uv]
keyring-provider = "subprocess"
